# projeto-rpg

./: CMakeLists.txt  LICENSE  README.md  get_username.c  get_username.h  main.c  makefile
assets/sprites/: python-legs.png~
assets/sprites/characters/: .mr-python.png-autosave.kra
src/: camera.c  character.c  game.c  main.c  obstacle.c  open-world-state.c
src/include/: camera.h  character.h  game.h  obstacle.h  state.h
